Fix Hover state on Mobile Devices

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -219,6 +219,7 @@ button:hover {
 @media screen and (max-width: 460px) {
     #title {
         font-size: 25px;
+        padding: 10px;
     }
 
     .info {
@@ -237,8 +238,12 @@ button:hover {
     }
 
     button:hover {
-        border: 2px solid #3498db;
-    }
+        border: 2px solid #3498db; 
+        background: none;
+        transform: none;
+      }
+
+   
 }
 
 @media screen and (max-width: 900px) {
